# curio

./: .dockerignore  .gitignore  .gitmodules  404.html  CODE_GUIDELINES.md  Dockerfile  HOW_TO_CREATE_ISSUES.md  HOW_TO_FORK.md  HOW_TO_MAKE_PULL_REQUESTS.md  IMPLEMENTATION_GUIDE.md  LICENSE  MANIFEST.in  PYODIDE_README.md  README.md  TODO.md  cs-524-project-doc  cs-524-readme  curio.py  docker-compose.deploy.yml  docker-compose.yml  example1.md  example_data_pool_style_tabs.tsx  example_three_tabs_implementation.tsx  index.html  mkdocs.yml  package-lock.json  package.json  package.py  pyodide_migration_presentation.md  pyproject.toml  requirements-docs.txt  requirements.txt  sitemap.xml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build-backend.yml  bump-version.yml  ci.yml  deploy-docs.yml  deploy.yml  docker-compose.yml  publish-pip-to-pypi.yml
CONTRIBUTING/: index.html
backend/: .dockerignore  .flaskenv  .gitignore  Dockerfile  Provenance.sql  README.md  config.py  create_project_db.py  create_provenance_db.py  create_template_db.py  middlewares.py  models.py  pytest.ini  requirements.txt  server.py  template.db  teste.ipynb
backend/app/: __init__.py  middlewares.py  models.py
backend/services/: google_oauth.py
backend/tests/: conftest.py  test_backend.py  test_routes.py
datasets/data.urbanlab.acs-neighborhood-profile@1/: manifest.json
datasets/data.urbanlab.chicago-boundary@1/: manifest.json
datasets/data.urbanlab.chicago-community-areas@1/: manifest.json
docs/: ARCHITECTURE.md  CATALOG.md  CODE-GUIDELINES.md  CODEBASE.md  COLLABORATION.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Curio-Replay.md  DEPLOYMENT.md  EXTENDING.md  HOW-TO-CREATE-ISSUES.md  HOW-TO-FORK.md  HOW-TO-MAKE-PULL-REQUESTS.md  ONBOARDING.md  Project_Documentation_and_Journey.md  QUICK-START.md  QUICK-USE.md  README.md  USAGE.md  WAREHOUSE.md  index.html  index.md
docs/examples/: 01-vega-lite-chained-transforms.json  01-vega-lite-chained-transforms.md  01-visual-analytics.json  01-visual-analytics.md  01_example_steps.ipynb  02-vega-lite-spatial-density.json  02-vega-lite-spatial-density.md  02-what-if.json  02-what-if.md  03-expert-in-the-loop.json  03-expert-in-the-loop.md  03-vega-lite-linked-temporal-charts.json  03-vega-lite-linked-temporal-charts.md  04-accessibility-analysis.json  04-accessibility-analysis.md  04-vega-lite-multi-flow-dashboard.json  04-vega-lite-multi-flow-dashboard.md  05-flooding-complaints.json  05-flooding-complaints.md  05-vega-lite-multi-view-drilldown.json  05-vega-lite-multi-view-drilldown.md  06-autark-what-if-picking.json  06-autark-what-if-picking.md  06-autark-what-if-shadow-study.json  06-autark-what-if-shadow-study.md  06-interaction.json  06-interaction.md  07-autark-gpu-shader.json  07-autark-gpu-shader.md  07-speed-camera.json  07-speed-camera.md  08-autark-spatial-join-regression.json  08-autark-spatial-join-regression.md  08-red-light-violation.json  08-red-light-violation.md  09-energy-efficiency.json  09-energy-efficiency.md  09-heterogeneous-data-linked-views.json  09-heterogeneous-data-linked-views.md  1-visual-analytics.md  (+24 more)
docs/getting-started/: installation.md  onboarding.md  quick_start.md
docs/nodesfactory@docs/: README.md  backend.md  (+6 more)
evaluation/: README.md  check_scalability.py  latency.csv  overhead_summary.csv  plot_overhead.py  run_synthetic_events.py
examples/: Barchart.json  DataPool.json  complaints_by_zip.md
frontend/: Dockerfile
logs/: backend.log.1  backend.log.2
sandbox/: .flaskenv  .gitignore  Dockerfile  config.py  docker-compose.yaml  extensions.py  python_wrapper.txt  requirements.txt  running.py  server.py
scripts/: build_example_pbfs.py  clean.sh  kill-curio.sh  test.sh
search/: search_index.json
sketches/: extract_single_svg.py  extract_vectors 2.py  extract_vectors.py  requirements.txt
tests/: DataPool_UTK.json  DataPool_Vega.json  DataPool_Vega_2.json  DataPool_df.json  DataPool_gdf.json  Image.json  Interaction.json  Interaction_UTK.json  Interaction_Vega.json  Merge.json  MergeFlowDataPool.json  Number Multiplier (Widget).json  UTK.json  Vega.json  nyc_zip.geojson
urban-workflows/: README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  webpack.config.js
utk_curio/: DefaultWorkflow.json  __init__.py  cli_entry.py  main.py
(+1006 files in other folders)
