[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utk-curio"
dynamic = ["version"]
description = "Curio: A dataflow-based framework for urban visual analytics"
authors = [{name = "UTK", email = "fabiom@uic.edu"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10,<3.12"

dependencies = [
  "requests==2.33.1",
  "pyarrow==24.0.0",
  "pillow==12.2.0",
  "rasterio==1.4.4",
  "python-dotenv==1.2.2",
  "Flask==3.1.3",
  "Flask-Caching==2.4.0",
  "fiona==1.10.1",
  "Flask-Migrate==4.1.0",
  "Flask-SQLAlchemy==3.1.1",
  "google-auth==2.50.0",
  "pandas==2.3.3",
  "altair>=6.0.0",
  "geopandas==1.1.3",
  "openai==2.34.0",
  "anthropic>=0.99.0",
  "google-generativeai>=0.8.6",
  "duckdb>=1.5.0",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-playwright==0.7.2",
  "pytest-flask==1.3.0",
  "allure-pytest==2.16.0",
  "black==26.3.1"
]

[project.scripts]
curio = "utk_curio.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "utk_curio.__version__"}

[tool.setuptools.packages.find]
where = ["."]



