[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utk-curio"
dynamic = ["version"]
description = "Curio: A dataflow-based framework for urban visual analytics"
authors = [{name = "UTK", email = "fabiom@uic.edu"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"

dependencies = [
  "requests==2.33.1",
  "pyarrow==24.0.0",
  "pillow==12.2.0",
  "rasterio==1.5.0",
  "python-dotenv==1.2.2",
  "Flask==3.1.3",
  "Flask-Caching==2.4.0",
  "fiona==1.10.1",
  "Flask-Migrate==4.1.0",
  "Flask-SQLAlchemy==3.1.1",
  "google-auth==2.52.0",
  "pandas==3.0.2",
  "altair>=6.1.0",
  "geopandas==1.1.3",
  "openai==2.36.0",
  "anthropic>=0.100.0",
  "google-generativeai>=0.8.6",
  "duckdb>=1.5.0",
  "tqdm>=4.67.3",
  "pygments>=2.20.0",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-playwright==0.7.2",
  "pytest-flask==1.3.0",
  "allure-pytest==2.16.0",
  "black==26.3.1",
  "shapely>=2.0"
]

[project.optional-dependencies]
# Installs the heavy ML stack needed by the Street Vision / CV Inference
# nodes (curio.streetvision@1). Endpoints in
# utk_curio/backend/app/streetvision/services/inference.py lazy-import these
# and return HTTP 503 with a "pip install curio[streetvision]" hint when
# they're missing, so the base install stays light for users who don't
# need on-device CV inference.
streetvision = [
  "torch>=2.0",
  "transformers>=4.30",
  "ultralytics>=8.0",
  "huggingface_hub>=0.20",
]

[project.scripts]
curio = "utk_curio.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "utk_curio.__version__"}

[tool.setuptools.packages.find]
where = ["."]



