[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utk-curio"
dynamic = ["version"]
description = "Curio: A dataflow-based framework for urban visual analytics"
authors = [{name = "UTK", email = "fabiom@uic.edu"}]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"

# Framework deps only. Data-ops libs (pandas, geopandas, rasterio, etc.)
# live in each node package's manifest.dependencies.python and are
# pip-installed by the launcher at ``curio start`` — see
# ``packages/curio.builtin@1/manifest.json`` for the worked example.
dependencies = [
  "requests==2.33.1",
  "python-dotenv==1.2.2",
  "Flask==3.1.3",
  "Flask-Caching==2.4.0",
  "Flask-Migrate==4.1.0",
  "Flask-SQLAlchemy==3.1.1",
  "google-auth==2.52.0",
  "openai==2.36.0",
  "anthropic>=0.100.0",
  "google-generativeai>=0.8.6",
  "altair>=6.1.0",
  "tqdm>=4.67.3",
  "pygments>=2.20.0",
  "pytest==9.0.3",
  "pytest-cov==7.1.0",
  "pytest-playwright==0.7.2",
  "pytest-flask==1.3.0",
  "allure-pytest==2.16.0",
  "black==26.3.1"
]

[project.scripts]
curio = "utk_curio.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "utk_curio.__version__"}

[tool.setuptools.packages.find]
where = ["."]



